@@ -1,3 +1,5 @@
+- edit-urpm-sources:
+  o use proper stock icons for arrows
 - rpmdrake
   o added dependencies section in package details panel
 
